css/styles.css
html,body
{
    scroll-behavior: smooth;
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: visible;
    font-size: 1em;
}

.full-page{
  padding-top: 5%;
  min-height: 100vh;
}

.personal-description {
  margin-bottom: 5%;
}

#personal-projects {
  margin-top: -5%;
}

#main-content {
  font-size: 1.2em;
}

#personal-statement {
  background-image: url('../img/code.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-color: #3d3b3b;
  text-align: center;
  min-height: 100vh;
}

.icon-links {
  font-size: 4em;
  color: white;
}

.statement-text {
  padding-top: 10%;
  font-size: 5em;
}


.highlighted {
  background-color: rgba(0,0,0,.65);
  border-radius: 15px;
}

.card {
  margin-top: 5%;
}

#contact-section {
  margin-top: 5%;
  margin-bottom: 5%;
  padding: 2.5% 5%;
}

#contact-form {
  margin-top: 2.5%;
}


@media only screen and (max-width: 650px) {
  .highlighted {
    border-radius: 0px;
  }
  html,body {
    overflow-x: hidden;
  }
}

